# LearnGL

./: .gitignore  CMakeLists.txt  Readme.md
src/: App.cpp  Mesh.cpp  Shader.cpp  ShaderProgram.cpp  Utils.cpp  hello.cpp
src/SnakeGame/: SnakeGame.cpp
src/include/: App.hpp  Camera.hpp  GameObject.hpp  GlDeps.hpp  Mesh.hpp  Primitives.hpp  Shader.hpp  ShaderProgram.hpp  SnakeGame.hpp  Utils.h
src/include/SnakeGame/: Field.hpp  Snake.hpp
src/shaders/: fBasic.glsl  vBasic.glsl
